// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing _qubitInput classical register 1`] = `
<text
  dominant-baseline="middle"
  font-size="16"
  text-anchor="start"
  x="20"
  y="20"
>
  |0⟩
</text>
`;

exports[`Testing _qubitInput classical register 2`] = `
<text
  dominant-baseline="middle"
  font-size="16"
  text-anchor="start"
  x="20"
  y="50"
>
  |0⟩
</text>
`;

exports[`Testing _qubitInput classical register 3`] = `
<text
  dominant-baseline="middle"
  font-size="16"
  text-anchor="start"
  x="20"
  y="0"
>
  |0⟩
</text>
`;

exports[`Testing formatInputs 1 quantum register 1`] = `
<g>
  <text
    dominant-baseline="middle"
    font-size="16"
    text-anchor="start"
    x="20"
    y="40"
  >
    |0⟩
  </text>
</g>
`;

exports[`Testing formatInputs Multiple quantum registers 1`] = `
<g>
  <text
    dominant-baseline="middle"
    font-size="16"
    text-anchor="start"
    x="20"
    y="40"
  >
    |0⟩
  </text>
  <text
    dominant-baseline="middle"
    font-size="16"
    text-anchor="start"
    x="20"
    y="100"
  >
    |0⟩
  </text>
  <text
    dominant-baseline="middle"
    font-size="16"
    text-anchor="start"
    x="20"
    y="160"
  >
    |0⟩
  </text>
</g>
`;

exports[`Testing formatInputs Quantum and classical registers 1`] = `
<g>
  <text
    dominant-baseline="middle"
    font-size="16"
    text-anchor="start"
    x="20"
    y="40"
  >
    |0⟩
  </text>
  <text
    dominant-baseline="middle"
    font-size="16"
    text-anchor="start"
    x="20"
    y="120"
  >
    |0⟩
  </text>
  <text
    dominant-baseline="middle"
    font-size="16"
    text-anchor="start"
    x="20"
    y="180"
  >
    |0⟩
  </text>
</g>
`;

exports[`Testing formatInputs Quantum and classical registers 2`] = `
<g>
  <text
    dominant-baseline="middle"
    font-size="16"
    text-anchor="start"
    x="20"
    y="40"
  >
    |0⟩
  </text>
  <text
    dominant-baseline="middle"
    font-size="16"
    text-anchor="start"
    x="20"
    y="100"
  >
    |0⟩
  </text>
  <text
    dominant-baseline="middle"
    font-size="16"
    text-anchor="start"
    x="20"
    y="220"
  >
    |0⟩
  </text>
</g>
`;

exports[`Testing formatInputs Skip quantum registers 1`] = `
<g>
  <text
    dominant-baseline="middle"
    font-size="16"
    text-anchor="start"
    x="20"
    y="40"
  >
    |0⟩
  </text>
  <text
    dominant-baseline="middle"
    font-size="16"
    text-anchor="start"
    x="20"
    y="100"
  >
    |0⟩
  </text>
</g>
`;
